--- a/quiz.css
+++ b/quiz.css
@@ -8,9 +8,8 @@
     color: red;
 }
 
-body
-{
-    background-color: lightgrey;
+body {
+    background-color: #FCFBF8;
 }
 .line {
     margin: 0;
@@ -31,10 +30,13 @@ body
 
 button {
     border-radius: 10%;
-    background-color: white;
+    background-color: #F7F7F9;
     border: solid 2px aquamarine;
     font-size: large;
 }
+    button:hover {
+        background-color: #E4E7F2;
+    }
 
 .title-head {
 
@@ -52,6 +54,7 @@ ul, li {
     border: none;
     list-style-type: none;
     display: inline-block;
+    padding-left: 5vw;
 }
 .Instructions{
     display: inline;
@@ -73,8 +76,8 @@ ul, li {
     display: none;
 }
 
-.quiz_box{
-    background-color: #D3DBED;
+.quiz_box {
+    background-color: #F7F7F9;
     border: 5px solid #054DF9;
     width: 95vw;
     margin-right: 10px;
@@ -90,6 +93,11 @@ ul, li {
     display:inline;
     border: none;
     font-size: 2em;
+    color: cornflowerblue;
+    padding-left: 5vw;
+}
+.which_question{
+    display: none;
     color: cornflowerblue;
 }
 
