--- a/quiz.css
+++ b/quiz.css
@@ -10,7 +10,9 @@
 
 body {
     background-color: #FCFBF8;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
 .line {
     margin: 0;
     padding: 0;
@@ -27,13 +29,19 @@ body {
 }
 
 .start {
-    border-radius: 10%;
-    background-color: white;
+    position: relative;
+    background-color: #FCFBF8;
+    border: none;
     font-size: large;
-    border: 5px solid #054DF9;
-    width: 50vw;
-    margin: 10% 10% 10% 10%;
-    
+    margin: 0 auto;
+    width: 25vw;
+}
+
+.basic_term {
+    width: 100vw;
+    height: 80vh;
+    padding: 5px;
+    margin-top: auto;
 }
 
 button {
@@ -64,12 +72,15 @@ ul, li {
     display: inline-block;
     padding-left: 5vw;
 }
-.Instructions{
-    display: inline;
-    height: 50vh;
-    width: 50vw;
-    color: indigo;
+.Instructions {
+    display: inline-block;
+    align-items: center;
+    justify-content: center;
     text-align: center;
+    margin-left: 25%;
+    margin-right: 25%;
+    color: indigo;
+    font-size: 2em;
 }
 #load_image{
     display: none;
